<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/y_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/y_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/x_title" />

    <TextView
        android:id="@+id/z_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/z_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/y_title" />

    <TextView
        android:id="@+id/Title_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/values_overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/x_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/x_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_overview" />

    <TextView
        android:id="@+id/x_value"
        android:layout_width="22dp"
        android:layout_height="17dp"
        android:layout_marginTop="36dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.332"
        app:layout_constraintStart_toEndOf="@+id/x_title"
        app:layout_constraintTop_toBottomOf="@+id/Title_overview" />

    <TextView
        android:id="@+id/y_value"
        android:layout_width="28dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toEndOf="@+id/y_title"
        app:layout_constraintTop_toBottomOf="@+id/x_value" />

    <TextView
        android:id="@+id/z_value"
        android:layout_width="25dp"
        android:layout_height="18dp"
        android:layout_marginTop="28dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toEndOf="@+id/z_title"
        app:layout_constraintTop_toBottomOf="@+id/y_value" />

    <TextView
        android:id="@+id/velocity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/velocity_title"
        app:layout_constraintBottom_toTopOf="@+id/sensorDataField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/z_title"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:id="@+id/velocity_value"
        android:layout_width="109dp"
        android:layout_height="19dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toEndOf="@+id/velocity_title"
        app:layout_constraintTop_toBottomOf="@+id/z_value"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/sensorDataField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/sesnsor_data"
        app:layout_constraintBottom_toTopOf="@+id/accelerationX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/accelerationX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/accel_x"
        app:layout_constraintBottom_toTopOf="@+id/accelerationY"
        app:layout_constraintEnd_toStartOf="@+id/accValueX"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/accelerationY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/accel_y"
        app:layout_constraintBottom_toTopOf="@+id/accelerationZ"
        app:layout_constraintEnd_toStartOf="@+id/accValueY"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/accelerationZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/accel_z"
        app:layout_constraintBottom_toTopOf="@+id/rotationX"
        app:layout_constraintEnd_toStartOf="@+id/accValueZ"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rotationX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/rotate_x"
        app:layout_constraintBottom_toTopOf="@+id/rotationY"
        app:layout_constraintEnd_toStartOf="@+id/rotateValueX"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rotationY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="20dp"
        android:text="@string/rotate_y"
        app:layout_constraintBottom_toTopOf="@+id/rotationZ"
        app:layout_constraintEnd_toStartOf="@+id/rotateValueY"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rotationZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/rotate_z"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rotateValueZ"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/accValueX"
        android:layout_width="89dp"
        android:layout_height="27dp"
        android:layout_marginEnd="124dp"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/accValueY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/velocity_value"
        app:layout_constraintVertical_bias="0.878" />

    <TextView
        android:id="@+id/accValueY"
        android:layout_width="93dp"
        android:layout_height="25dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="32dp"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/accValueZ"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/accValueZ"
        android:layout_width="85dp"
        android:layout_height="23dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="20dp"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/rotateValueX"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rotateValueX"
        android:layout_width="95dp"
        android:layout_height="21dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="20dp"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/rotateValueY"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rotateValueY"
        android:layout_width="101dp"
        android:layout_height="25dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="12dp"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/rotateValueZ"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rotateValueZ"
        android:layout_width="108dp"
        android:layout_height="30dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="56dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>